force-app/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__FloorDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FloorDiscount__c</fullName>
        <description>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</description>
        <inlineHelpText>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&apos;s approval settings.</inlineHelpText>
        <label>Floor Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </CustomField>