force-app/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__LowerBound__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>The lowest quote line quantity that applies to this tier. This number must match the upper bound of the previous tier.</description>
        <inlineHelpText>The lowest quote line quantity that applies to this tier. This number must match the upper bound of the previous tier.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>