force-app/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__PricingGuidance__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingGuidance__c</fullName>
        <description>The pricing guidance that contains this tier.</description>
        <inlineHelpText>The pricing guidance that contains this tier.</inlineHelpText>
        <label>Pricing Guidance</label>
        <referenceTo>SBQQ__PricingGuidance__c</referenceTo>
        <relationshipLabel>Pricing Guidance Tiers</relationshipLabel>
        <relationshipName>PricingGuidanceTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>