force-app/main/default/objects/SBQQ__PricingGuidanceTier__c/fields/SBQQ__TargetDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetDiscount__c</fullName>
        <description>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</description>
        <inlineHelpText>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</inlineHelpText>
        <label>Target Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </CustomField>